--- a/src/pages/termsandconditions/termsandconditions.html
+++ b/src/pages/termsandconditions/termsandconditions.html
@@ -12,7 +12,8 @@
 
 
 <ion-content padding class="background">
-  <p style="color: darkslategray;">
+   <ion-card style="border-radius: 15px">
+        <ion-card-content>
 swfklrwg; e;rlgergjreg rgerjgjerg rgr lghr ghrhg rh hfh
 he fb wbgr wbgrgeg rjg hrgergkl rgjgr l regrgnrjgrkeg<br>
 hrg;jr g;rg;w b; rger;rgererg'cc e gerg; grgr;g 
@@ -32,6 +33,6 @@ swfklrwg; e;rlgergjreg rgerjgjerg rgr lghr ghrhg rh hfh
 he fb wbgr wbgrg eg rjg hrgergkl rgjgr l regrgnrjgrkeg 
 hrg;jr g;rg;w b; rger;rgererg' e gerg; grgr;g <br>
 <br><br>
-  </p>
-
+ </ion-card-content>
+    </ion-card>    
 </ion-content>
