--- a/src/pages/awaitingapproval/awaitingapproval.html
+++ b/src/pages/awaitingapproval/awaitingapproval.html
@@ -4,29 +4,20 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-      <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-      <ion-title style="text-align: center">
-           <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
+<ion-header transparent>
+  <ion-navbar transparent>
+      <ion-title>
+           Awaiting Approval
       </ion-title>
   </ion-navbar>
-
 </ion-header>
 
-<ion-content padding style="background-color: #edeaea">
-    <ion-card >
-        <ion-card-header style="font-family: 'Noto Sans', sans-serif">
-          Awaiting Approval
-        </ion-card-header>
+<ion-content padding class="background">
+  <img width="200" height="200" src="assets/imgs/teras_logo.png">
+    <ion-card style="border-radius: 15px">
         <ion-card-content>
-          The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
-          <br><br>
-          The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
-          <br><br>
+          Thank you for providing proof of payment, we will sent a SMS once your account has been activeted.
+          <br>
         </ion-card-content>
     </ion-card>    
 </ion-content>
