--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -4,18 +4,26 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
+<ion-header transparent>
+  <ion-navbar transparent>
     <ion-title>Order</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content style="background-color: #edeaea" padding>
+<ion-content class="background" padding>
     <ion-card style="border-radius: 15px">
-      <img height="200" src="assets/imgs/IMG_teras_d1450.jpg"/>
+      <ion-slides autoplay="5000" loop="true" speed="3000">
+    <ion-slide class="portrait">
+      <img src="assets/imgs/juice1.jpg">
+    </ion-slide>
+    <ion-slide class="portrait">
+      <img src="assets/imgs/juice2.jpg">
+    </ion-slide>
+    <ion-slide class="portrait">
+      <img src="assets/imgs/juice3.jpg">
+    </ion-slide>
+  </ion-slides>
       <ion-card-content>
         <ion-card-title>
           Teras Herbal Juice
@@ -29,17 +37,5 @@
             <ion-spinner *ngIf="!showButton"></ion-spinner>
         </div>
       </ion-card-content>
-    </ion-card>
-    <ion-card style="border-radius: 15px">
-      <ion-card-content>
-        <ion-card-title>
-          Order History
-          </ion-card-title>
-          
-        <ion-spinner *ngIf="historicOrders.length <= 0"></ion-spinner>
-        <ion-item-group *ngIf="historicOrders.length > 0">
-            <ion-item-divider *ngFor="let order of historicOrders" [value]="order.createdDate">order date:{{order.createdDate}} <br>quantity: {{order.quantity}}</ion-item-divider>
-        </ion-item-group>
-      </ion-card-content>
-    </ion-card>
+    </ion-card>    
 </ion-content>
