--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -4,45 +4,35 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-      <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-      <ion-title style="text-align: center">
-           <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
-      </ion-title>
-  </ion-navbar>
-
+<ion-header transparent>
+    <ion-navbar transparent>
+        <ion-title>
+            Proof of Payment
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
-<ion-content padding style="background-color: #edeaea">
-    <ion-card *ngIf="showUploadButton">
+<ion-content padding class="background">
+    <img width="100" height="100" src="assets/imgs/teras_logo.png">
+    <ion-card style="border-radius: 15px">
         <ion-card-header style="font-family: 'Noto Sans', sans-serif">
           Upload Proof of Payment
         </ion-card-header>
         <ion-card-content>
-          The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
+          Initiation fee must be paid before you can use the this application, if you have already made a payment please upload proof of payment.
+          <br>
+          <button ion-button class="submitbtn" style="width:100%" (click)="uploadDocument()">browse</button>
           <br><br>
-          The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
-          <br><br>
-          <button ion-button color="secondary" style="width:100%" round (click)="listDirectories()">browse</button>
-        </ion-card-content>
-    </ion-card>
-    <ion-card *ngIf="!showUploadButton">
-        <ion-card-header style="font-family: 'Noto Sans', sans-serif">
-            <ion-icon name="folder" style="color:#14bf14"></ion-icon>&nbsp;Documents
-        </ion-card-header>
-        <ion-card-content>
-             <div *ngFor="let file of files">
-                <div (click)="uploadDocument()">
-                    {{file.name}}
-                </div>
-               <!-- <div >
-                  File: {{file.name}}
-                </div> -->
-            </div>
+          If you haven't made payment you can make EFT or a deposit using the bank details below:
+          <br>
+          <b>Reference Number:</b> {{uid}}
+          <br>
+          <b>Bank Name:</b> Standard Bank
+          <br>
+          <b>Account Number:</b> 51515454584
+          <br>
+          <b>Branch Code:</b> 051 001
+          <br>          
         </ion-card-content>
     </ion-card>
 </ion-content>
