--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -4,8 +4,8 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-toolbar>
+<ion-header transparent>
+  <ion-toolbar transparent>
     <ion-title>
       Cart
     </ion-title>
@@ -19,13 +19,13 @@
 </ion-header>
 
 
-<ion-content style="background-color: #edeaea" padding>
+<ion-content class="background" padding>
     <ion-card>
         <ion-card-content>
             <ion-list>
                 <ion-item>
                   <ion-label floating>Quantity</ion-label>
-                  <ion-input [(ngModel)]="order.quantity" (ngModelChange)="calculateTotal($event)" type="text"></ion-input>
+                  <ion-input [(ngModel)]="order.quantity" (ngModelChange)="calculateTotal($event)" type="number"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label>Payment Method</ion-label>
@@ -61,7 +61,7 @@
                     <ion-spinner></ion-spinner>
                 </div>
             <div style="text-align: center" *ngIf="!showSpinner">
-                <button (click)="placeOrder()" ion-button color="secondary" style="width:100%" round>Place order</button>
+                <button [disabled]="showSpinner" (click)="placeOrder()" ion-button color="secondary" style="width:100%" round>Place order</button>
             </div>
         </ion-card-content>
     </ion-card>
