--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -25,7 +25,7 @@
           <br><br>
           If you haven't made payment you can make EFT or a deposit using the bank details below:
           <br>
-          <b>Reference Number:</b> {{uid}}
+          <b>Reference Number:</b> {{paymentReference}}
           <br>
           <b>Bank Name:</b> Standard Bank
           <br>
