--- a/src/pages/awaitingapproval/awaitingapproval.html
+++ b/src/pages/awaitingapproval/awaitingapproval.html
@@ -16,7 +16,7 @@
   <img width="200" height="200" src="assets/imgs/teras_logo.png">
     <ion-card style="border-radius: 15px">
         <ion-card-content>
-          Thank you for providing proof of payment, we will sent a SMS once your account has been activeted.
+          Thank you for providing proof of payment, we will send you SMS once your account has been activated.
           <br>
         </ion-card-content>
     </ion-card>    
