--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -19,8 +19,9 @@
           Upload Proof of Payment
         </ion-card-header>
         <ion-card-content>
-          Initiation fee must be paid before you can use the this application, if you have already made a payment please upload proof of payment.
+          Initiation fee of R2 700.00 must be paid before you can use the this application, if you have already made a payment please upload proof of payment.
           <br>
+          Please note: that the amount of R2 700.00 is inclusive of 5 bottles and a once off of R100.00 and R200.00 to the referrer.
           <button ion-button class="submitbtn" style="width:100%" (click)="uploadDocument()">browse</button>
           <br><br>
           If you haven't made payment you can make EFT or a deposit using the bank details below:
