--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,7 +25,7 @@
         </ion-card-content>
         <ion-row>
             <ion-col>
-                <button class="icon-btn" (click)="viewOrders('Order History')" ion-button icon-start clear small>
+                <button class="icon-btn" style="margin-left: -13px;" (click)="viewOrders('Order History')" ion-button icon-start clear small>
                     <ion-icon name="basket"></ion-icon>                   
                     <div style="margin-top: 5px;">View Previous Orders</div>
                 </button>
@@ -35,13 +35,18 @@
 
     <ion-card style="border-radius: 0px 0px 60px 0px;">
         <ion-card-header>
-            Points
+            Commission 
         </ion-card-header>
-        <ion-card-content style="margin-top: -5px;">
-            <ion-icon name="star" color="yellow" style="color:yellow"></ion-icon>
-            <b>{{points}}</b>
-            <ion-spinner style="margin-bottom: -5px;" *ngIf="loadingPoints"></ion-spinner> Available Points<br>
+        <ion-card-content style="float: right">
+             
         </ion-card-content>
+        <ion-row>
+            <ion-col small>
+                <ion-icon name="star" color="yellow" style="color:yellow"></ion-icon>
+            <span style="color: green"><b>R {{myCommision}} </b></span>
+            <ion-spinner style="margin-bottom: -5px;" *ngIf="loadingPoints"></ion-spinner>  Commision<br>
+            </ion-col>
+        </ion-row>
     </ion-card>
     <ion-card style="border-radius: 5px 45px 5px 5px;">
         <ion-card-header>
@@ -51,7 +56,7 @@
         <ion-card-content>
             <ion-spinner *ngIf="usersUnderMe.length <= 0 && loading"></ion-spinner>
             <ion-item-group *ngIf="usersUnderMe.length > 0">
-                <ion-item-divider *ngFor="let people of usersUnderMe" [value]="people.name"><ion-label>{{people.name + " " + people.surname}}</ion-label><ion-toggle disabled checked="people.isActive"></ion-toggle></ion-item-divider>
+                <ion-item-divider *ngFor="let people of usersUnderMe" [value]="people.name"><ion-label>{{people.name + " " + people.surname}}</ion-label><ion-toggle disabled [checked]="people.isActive"></ion-toggle></ion-item-divider>
             </ion-item-group>
             <p *ngIf="usersUnderMe.length <= 0 && !loading">no users</p>
         </ion-card-content>
