--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,7 +5,7 @@
     <form [formGroup]="loginForm">
       <ion-list padding>
         <ion-item>
-          <ion-label floating>Email</ion-label>
+          <ion-label floating>Email/ Cell Phone</ion-label>
           <ion-input [(ngModel)]="user.email" formControlName="email" [class.invalid]="!loginForm.controls.email.valid && (loginForm.controls.email.dirty || submitAttempt)"
             type="email"></ion-input>
         </ion-item>
